fix word wrap

--- a/Portfolio/Stylesheet/Stylesheet.css
+++ b/Portfolio/Stylesheet/Stylesheet.css
@@ -461,3 +461,9 @@ footer {
 footer center {
     color: white;
 }
+
+/*  About section*/
+
+.about-text {
+    white-space: normal;
+}
